SHIFT+K in vertext paint dosesn't update #58840

Closed
opened 2018-12-06 09:26:57 +01:00 by ameen vengara · 6 comments

System Information
Operating system: Win 10
Graphics card: NVIDIA GeForce GTX 750

Blender Version
Broken: 2.8 Beta

Short description of error
In vertex paint mode SHIFT + K doesn't update the mesh color. after one click it updates.

Exact steps for others to reproduce the error
add a cube > Go to vertex paint mode > choose a color > press SHIFT + K
Also clicking on the Set Vertex Colour from the Paint menu doesn't work!

**System Information** Operating system: Win 10 Graphics card: NVIDIA GeForce GTX 750 **Blender Version** Broken: 2.8 Beta **Short description of error** In vertex paint mode SHIFT + K doesn't update the mesh color. after one click it updates. **Exact steps for others to reproduce the error** add a cube > Go to vertex paint mode > choose a color > press SHIFT + K Also clicking on the Set Vertex Colour from the Paint menu doesn't work!
Author

Added subscriber: @ameenvengara

Added subscriber: @ameenvengara

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sebastian Parborg self-assigned this 2018-12-06 11:24:54 +01:00

I'll take a look at this. It seems like the "Set Vertex Colour" operation does not trigger a refresh of the rendered mesh data.

I'll take a look at this. It seems like the "Set Vertex Colour" operation does not trigger a refresh of the rendered mesh data.
Sebastian Parborg removed their assignment 2018-12-06 12:37:48 +01:00
Sergey Sharybin was assigned by Sebastian Parborg 2018-12-06 12:37:48 +01:00

It seems like the is some depsgraph magic going in here. The changes from all vertex paint operators doesn't seem to trigger a refresh of the mesh data in the view port.
I've taken a look in paint_vertex_color_ops.c and changes seem to be scheduled to refresh the data, but this doesn't happen.

It seems like the is some depsgraph magic going in here. The changes from all vertex paint operators doesn't seem to trigger a refresh of the mesh data in the view port. I've taken a look in paint_vertex_color_ops.c and changes seem to be scheduled to refresh the data, but this doesn't happen.

This issue was referenced by 50b0448bd3

This issue was referenced by 50b0448bd39d1776471526f19f57963394582810

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58840
No description provided.