Fix T58840: SHIFT+K in vertex paint doesn't update